# yandex_CPP_specialization

./: .clang-format  .gitignore  CMakeLists.txt  README.md  input.txt  main.cpp  output.txt  reading.cpp
1__white_belt/final/: final.cpp  input.txt  output.txt  solution.cpp
1__white_belt/week 2/: 004-sriedniaia-tiempieratura.cpp  006-iezhiemiesiachnyie-diela.cpp  007-anaghrammy.cpp  008-spravochnik-stolits.cpp  009-avtobusnyie-ostanovki-1.cpp  010-avtobusnyie-ostanovki-2.cpp  011-kolichiestvo-unikal-nykh-strok.cpp  012-mnozhiestvo-znachienii-slovaria.cpp  013-sinonimy.cpp  014-avtobusnyie-ostanovki-3.cpp  maksimizator.cpp  pieriemieshchieniie-strok.cpp  razvorot-posliedovatiel-nosti.cpp
1__white_belt/week 3/: 001-sortirovka-tsielykh-chisiel-po-moduliu.cpp  002-sortirovka-biez-uchiota-rieghistra.cpp  004-imiena-i-familii-1.cpp  005-imiena-i-familii-2.cpp  006-stroka.cpp
1__white_belt/week 4/: 001-struktura-lecturetitle.cpp  002-obratimaia-funktsiia.cpp  notes.cpp
1__white_belt/week 4/005-rabota-s-failami/: part1.cpp  part2.cpp
1__white_belt/week 4/006-vyvod-s-tochnost-iu/: 006-vyvod-s-tochnost-iu.cpp  input.txt
1__white_belt/week 4/007-chtieniie-i-vyvod-tablitsy/: solution.cpp
1__white_belt/week 4/010-funktsiia-ensureequal/: 010-solution.cpp
1__white_belt/week 4/012-kal-kuliator-obyknoviennykh-drobiei/: 012-kal-kuliator-obyknoviennykh-drobiei.cpp
1__white_belt/week 4/013-rabota-s-siervierom-vriemieni/: 013-rabota-s-siervierom-vriemieni.cpp
1__white_belt/week 4/notes/: image-weight.cpp
2__yellow_belt/kursovoi-proiekt/: EventSet.h  comparison.h  database_test.cpp  date.cpp  logical_op.h  main.cpp  node.cpp  node.h  tests.h  token.cpp
2__yellow_belt/week_1/001-summirovaniie-matrits/: solution.cpp
2__yellow_belt/week_1/003-massa-blokov/: 003-massa-blokov.cpp
2__yellow_belt/week_1/004-baza-rieghionov/: solution.cpp
2__yellow_belt/week_1/005-triekier-zadach/: 005-triekier-zadach.cpp  output.txt  solution.cpp
2__yellow_belt/week_1/007-ssylka-na-eliemient/: solution.cpp
2__yellow_belt/week_2/001-diekompozitsiia-proghrammy/: 001-diekompozitsiia-proghrammy.cpp
2__yellow_belt/week_2/002-tiesty-dlia-funktsii-getdistinctrealrootcount/: 002-tiesty-dlia-funktsii-getdistinctrealrootcount.cpp
2__yellow_belt/week_2/003-tiesty-dlia-klassa-person/: 003-tiesty-dlia-klassa-person.cpp  solution.cpp
2__yellow_belt/week_2/004-tiesty-dlia-klassa-rational/: 004-tiesty-dlia-klassa-rational.cpp  solution.cpp
2__yellow_belt/week_2/005-tiesty-dlia-funktsii-ispalindrom/: 005-tiesty-dlia-funktsii-ispalindrom.cpp  solution.cpp
2__yellow_belt/week_3/000-project-organization/: output.txt  solution.cpp  solution.h
2__yellow_belt/week_3/001-riealizovat-funktsii-obiavliennyie-v-zagholovochnom-failie/: sum_reverse_sort.cpp
2__yellow_belt/week_3/002-riealizovat-klass-obiavliennyi-v-zagholovochnom-failie/: phone_number.cpp
2__yellow_belt/week_3/003-napisat-obiavlieniie-klassa/: Rectangle.cpp  tests.cpp
2__yellow_belt/week_3/004-diekompozitsiia-proghrammy-2/: query.cpp  query.h  responses.cpp
2__yellow_belt/week_4/001-chast-viektora/: main.cpp  solution.cpp  tests.cpp
2__yellow_belt/week_4/003-razbiieniie-na-slova/: solution.h  tests.cpp
2__yellow_belt/week_4/004-udalieniie-povtorov/: output.txt  solution.cpp  solution.h  tests.cpp
2__yellow_belt/week_4/006-diemoghrafichieskiie-pokazatieli/: solution.h
2__yellow_belt/week_4/011-postroieniie-arifmietichieskogho-vyrazhieniia/: main.cpp
2__yellow_belt/week_5/000/: solution.cpp  solution.h  tests.cpp  tests.h
2__yellow_belt/week_5/002-otpravka-uviedomlienii/: output.txt
3__red_belt/week_1/001-maksimal-nyi-eliemient-po-priedikatu/: main.cpp  tests.cpp
3__red_belt/week_1/002-makros-log/: main.cpp
3__red_belt/week_1/003-gienierator-komparatorov/: airline_ticket.h  main.cpp  tests.cpp
3__red_belt/week_1/004-makros-update-field/: main.cpp
3__red_belt/week_1/005-plokhoi-makros/: main.cpp
3__red_belt/week_1/006-makros-uniq-id/: main.cpp
3__red_belt/week_1/007-tablitsa/: main.cpp
3__red_belt/week_1/008-diek-na-osnovie-dvukh-viektorov/: Deque.h  main.cpp
3__red_belt/week_1/009-shablon-paginator/: main.cpp
3__red_belt/week_2/001-sortirovka-studientov-po-rieitinghu/: main.cpp  student.h
3__red_belt/week_2/002-izuchieniie-novogho-iazyka/: Learner.h  main.cpp
3__red_belt/week_2/003-ekspriessy/: main.cpp  solution.hpp
3__red_belt/week_2/004-eliektronnaia-knigha/: main.cpp  output.txt  solution.hpp
3__red_belt/week_2/005-sistiema-bronirovaniia-otieliei/: main.cpp  performance.py  solution.hpp
3__red_belt/week_3/001-pul-obiektov/: main.cpp  solution.hpp
3__red_belt/week_3/002-swap-sortpointers-reversedcopy/: main.cpp  solution.hpp
3__red_belt/week_3/003-pishiem-svoi-viektor/: main.cpp  (+2 more)
Masloriy_framework/: glue.h  profile.h  readFromInputTxt.cpp  readFromInputTxt.h  readme.txt  test_runner.h  unit_test_framework.cpp  unit_test_framework.h  utilities.h
sample/: main.cpp  tests.cpp  utilities.cpp
white_belt/final/: final.cpp
white_belt/week 1/: minimal_string.cpp  part2.cpp  uravnenie.cpp
white_belt/week 2/: 004-sriedniaia-tiempieratura.cpp  005-ochieried.cpp  006-iezhiemiesiachnyie-diela.cpp  007-anaghrammy.cpp  008-spravochnik-stolits.cpp  009-avtobusnyie-ostanovki-1.cpp  010-avtobusnyie-ostanovki-2.cpp  011-kolichiestvo-unikal-nykh-strok.cpp  012-mnozhiestvo-znachienii-slovaria.cpp  013-sinonimy.cpp  014-avtobusnyie-ostanovki-3.cpp  maksimizator.cpp  pieriemieshchieniie-strok.cpp  razvorot-posliedovatiel-nosti.cpp
white_belt/week 3/: 001-sortirovka-tsielykh-chisiel-po-moduliu.cpp  002-sortirovka-biez-uchiota-rieghistra.cpp  003-otsortirovannyie-stroki.cpp  004-imiena-i-familii-1.cpp  005-imiena-i-familii-2.cpp  006-stroka.cpp  007-imiena-i-familii-3.cpp
white_belt/week 4/: 001-struktura-lecturetitle.cpp  002-obratimaia-funktsiia.cpp  003-obratimaia-funktsiia-s-umnozhieniiem-i-dielieniiem.cpp  notes.cpp
yellow_belt/kursovoi-proiekt/: EventSet.cpp  condition_parser.cpp  condition_parser_test.cpp  database.cpp  database.h  date.h  entry.cpp  entry.h  logical_op.cpp  tests.cpp
(+359 files in other folders)
