cmake_minimum_required(VERSION 3.16)
project(def)

set(CMAKE_CXX_STANDARD 20)

add_executable(def main.cpp)
add_executable(week1 "white_belt/week 1/part2.cpp")
add_executable(minimal_string "white_belt/week 1/minimal_string.cpp")
add_executable(uravnenie "white_belt/week 1/uravnenie.cpp")


add_executable(maksimizator "white_belt/week 2/maksimizator.cpp")
add_executable(pieriemieshchieniie-strok "white_belt/week 2/pieriemieshchieniie-strok.cpp")
add_executable(razvorot-posliedovatiel-nosti "white_belt/week 2/razvorot-posliedovatiel-nosti.cpp")
add_executable(004-sriedniaia-tiempieratura "white_belt/week 2/004-sriedniaia-tiempieratura.cpp")
add_executable(005-ochieried "white_belt/week 2/005-ochieried.cpp")
add_executable(006-iezhiemiesiachnyie-diela "white_belt/week 2/006-iezhiemiesiachnyie-diela.cpp")

add_executable(007-anaghrammy "white_belt/week 2/007-anaghrammy.cpp")

add_executable(008-spravochnik-stolits "white_belt/week 2/008-spravochnik-stolits.cpp")

add_executable(009-avtobusnyie-ostanovki-1 "white_belt/week 2/009-avtobusnyie-ostanovki-1.cpp")

add_executable(010-avtobusnyie-ostanovki-2 "white_belt/week 2/010-avtobusnyie-ostanovki-2.cpp")

add_executable(011-kolichiestvo-unikal-nykh-strok "white_belt/week 2/011-kolichiestvo-unikal-nykh-strok.cpp")

add_executable(012-mnozhiestvo-znachienii-slovaria "white_belt/week 2/012-mnozhiestvo-znachienii-slovaria.cpp")

add_executable(013-sinonimy "white_belt/week 2/013-sinonimy.cpp")

add_executable(014-avtobusnyie-ostanovki-3 "white_belt/week 2/014-avtobusnyie-ostanovki-3.cpp")

add_executable(015-sortirovka-tsielykh-chisiel-po-moduliu "white_belt/week 3/001-sortirovka-tsielykh-chisiel-po-moduliu.cpp")

add_executable(016-sortirovka-biez-uchiota-rieghistra "white_belt/week 3/002-sortirovka-biez-uchiota-rieghistra.cpp")

add_executable(003-otsortirovannyie-stroki "white_belt/week 3/003-otsortirovannyie-stroki.cpp")

add_executable(004-imiena-i-familii-1 "white_belt/week 3/004-imiena-i-familii-1.cpp")

add_executable(005-imiena-i-familii-2 "white_belt/week 3/005-imiena-i-familii-2.cpp")

add_executable(reading reading.cpp)

add_executable(006-stroka "white_belt/week 3/006-stroka.cpp")

add_executable(007-imiena-i-familii-3 "white_belt/week 3/007-imiena-i-familii-3.cpp")

add_executable(notes "white_belt/week 4/notes.cpp")

add_executable(001-struktura-lecturetitle "white_belt/week 4/001-struktura-lecturetitle.cpp")

add_executable(image-weight "white_belt/week 4/notes/image-weight.cpp")

add_executable(002-obratimaia-funktsiia "white_belt/week 4/002-obratimaia-funktsiia.cpp")

add_executable(003-obratimaia-funktsiia-s-umnozhieniiem-i-dielieniiem "white_belt/week 4/003-obratimaia-funktsiia-s-umnozhieniiem-i-dielieniiem.cpp")

add_executable(part1 "white_belt/week 4/005-rabota-s-failami/part1.cpp")

add_executable(part2 "white_belt/week 4/005-rabota-s-failami/part2.cpp")

add_executable(006-vyvod-s-tochnost-iu "white_belt/week 4/006-vyvod-s-tochnost-iu/006-vyvod-s-tochnost-iu.cpp")

add_executable(solution "white_belt/week 4/007-chtieniie-i-vyvod-tablitsy/solution.cpp")

add_executable(008-solution "white_belt/week 4/008-spisok-studientov/008-solution.cpp")

add_executable(009-solution "white_belt/week 4/009-klass-rational/009-solution.cpp")

add_executable(010-solution "white_belt/week 4/010-funktsiia-ensureequal/010-solution.cpp")

add_executable(011-iskliuchieniia-v-klassie-rational "white_belt/week 4/011-iskliuchieniia-v-klassie-rational/011-iskliuchieniia-v-klassie-rational.cpp")

add_executable(012-kal-kuliator-obyknoviennykh-drobiei "white_belt/week 4/012-kal-kuliator-obyknoviennykh-drobiei/012-kal-kuliator-obyknoviennykh-drobiei.cpp")

add_executable(013-rabota-s-siervierom-vriemieni "white_belt/week 4/013-rabota-s-siervierom-vriemieni/013-rabota-s-siervierom-vriemieni.cpp")

add_executable(final white_belt/final/final.cpp)
